--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -94,6 +94,11 @@ header h2 {
   margin: 0 auto;
 }
 
+.exnner {
+	width: 800px;
+	margin: 0 auto;
+}
+
 #container .inner img {
   max-width: 100%;
 }
