--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -244,6 +244,13 @@ form {
 
 
 /* GENERAL ELEMENT TYPE STYLES */
+title1 {
+  font-family: 'Chivo', 'Helvetica Neue', Helvetica, Arial, serif;
+  font-size: 48px; font-weight: 900;
+  line-height: 1.2;
+  color: #303030;
+  letter-spacing: -1px;	
+}
 
 h1 {
   font-size: 32px;
