--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -157,6 +157,10 @@ a.button span {
   padding-left: 50px;
 }
 
+#appstore span {
+  background: transparent url(../images/Apple-appstore.png) 12px 50% no-repeat;
+}
+
 #download-zip span {
   background: transparent url(../images/zip-icon.png) 12px 50% no-repeat;
 }
